# rlm-self-distill

./: .gitignore  CONTRIBUTING.md  EXPERIMENT_LOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
dashboard/: data.json  index.html
experiments/: __init__.py  exp001_recursive_tool_creation.py  exp002_scaling_analysis.py  exp003_executable_tools.py  exp004_safety_macro_pipeline.py  exp005_rlm_tool_creation.py  exp006_prompt_variations.py  exp007_evidence_guided_tools.py  exp008_large_pii_evidence.py  exp009_tool_validation.py  exp010_iterative_refinement.py  exp011_grammar_skill.py
scratch/: debug_experiments.ipynb  experiment_ollama_models.ipynb  explore_results.html  run_experiments.py
scripts/: extract_experiment_data.py  setup_ollama_models.sh
self_distill/: __init__.py
self_distill/clients/: __init__.py  ollama_client.py
self_distill/datasets/: __init__.py  ai4privacy.py  base.py  cola.py  gsm8k.py  pii.py  sciq.py
self_distill/evidence/: __init__.py  cluster.py  embeddings.py  store.py  vector_store.py
self_distill/rlm/: __init__.py  self_distill_rlm.py
self_distill/skills/: __init__.py  base.py  registry.py
self_distill/tracking/: __init__.py  mlflow_tracker.py
tests/clients/: test_ollama_client.py  test_ollama_integration.py
tests/datasets/: test_base.py  test_cola.py  test_gsm8k.py  test_pii.py  test_sciq.py
tests/evidence/: __init__.py  test_cluster.py  test_embeddings.py  test_store.py  test_vector_store.py
tests/integration/: __init__.py  test_evidence_skills_pipeline.py  test_experiment_validation.py
(+10 files in other folders)
